--- a/Sparkt.WebApp/Views/Home/Index.cshtml
+++ b/Sparkt.WebApp/Views/Home/Index.cshtml
@@ -355,7 +355,7 @@
                 </div>
 
                 <div class="offering-blk">
-                    <h5>Core</h5>
+                    <h5>Core Value</h5>
 
                     <ul class="collapsible" data-collapsible="accordion">
                         <li>
@@ -729,6 +729,10 @@
                 <div class="swiper-container accolades-slider">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
+                            <div class="caption"><span>2nd Highest metal tally at CIDCA</span></div>
+                            <img src="~/Content/images/achievements7.jpg" alt="">
+                        </div>
+                        <div class="swiper-slide">
                             <div class="caption"><span>Agency of the Year at Campaign South Asia</span></div>
                             <img src="~/Content/images/achievements1.jpg" alt="">
                         </div>
@@ -1008,6 +1012,24 @@
                                         <img src="~/Content/work/images/thums/ted-thum.jpg" alt="">
                                         <div class="caption">
                                             <h4>TED GOOGLE CARDS</h4>
+                                            <p></p>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="@Url.Action("HSPUBHMedia","work")">
+                                        <img src="~/Content/work/images/thums/hsubh-thum.jpg" alt="">
+                                        <div class="caption">
+                                            <h4>Har Shaakh Pe Ullu Baithaa Hai</h4>
+                                            <p></p>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="@Url.Action("TextMoji","work")">
+                                        <img src="~/Content/work/images/thums/textmoji-thum.jpg" alt="">
+                                        <div class="caption">
+                                            <h4>MMF Text Moji</h4>
                                             <p></p>
                                         </div>
                                     </a>
