--- a/Sparkt.WebApp/Views/Shared/_Layout.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title</title>
+    <title>Sparkt | A Creative & Digital Marketing Agency in Mumbai</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -28,27 +28,27 @@
     <meta name="msapplication-TileImage" content="~/Content/images/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <meta name="author" content="Sparkt India">
+    <meta name="author" content="Sparkt | A Creative & Digital Marketing Agency in Mumbai">
     <meta name="keywords" content="digital agency, creative agency, SMO, SEO, SEM, programmatic media buying, analytics, website design, website development">
-    <meta name="description" content="">
+    <meta name="description" content="Sparkt is a collaboration of data sciences and emotional intelligence to bridge need gaps with creative and experiential solutions both for brands and consumers.">
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="">
-    <meta name="twitter:title" content="Sparkt Work">
-    <meta name="twitter:description" content="">
-    <meta name="twitter:creator" content="">
-    <meta name="twitter:image" content="" />
+    <meta name="twitter:site" content="SparktIndia">
+    <meta name="twitter:title" content="Sparkt | A Creative & Digital Marketing Agency in Mumbai">
+    <meta name="twitter:description" content="Sparkt is a collaboration of data sciences and emotional intelligence to bridge need gaps with creative and experiential solutions both for brands and consumers.">
+    <meta name="twitter:creator" content="SparktIndia">
+    <meta name="twitter:image" content="~/Content/images/spaktLogoFB.jpg" />
     <!-- Open Graph data -->
-    <meta property="og:title" content="Sparkt Work" />
-    <meta property="og:url" content="" />
-    <meta property="og:description" content="" />
+    <meta property="og:title" content="Sparkt | A Creative & Digital Marketing Agency in Mumbai" />
+    <meta property="og:url" content="http://www.sparkt.in" />
+    <meta property="og:description" content="Sparkt is a collaboration of data sciences and emotional intelligence to bridge need gaps with creative and experiential solutions both for brands and consumers." />
     <meta property="og:site_name" content="Sparkt India" />
     <meta property="og:type" content="website" />
     <meta property="fb:admins" content="306588899709911" />
-    <meta property="og:image" content="" />
+    <meta property="og:image" content="~/Content/images/spaktLogoFB.jpg" />
     <!-- Schema.org markup for Google+ -->
-    <meta itemprop="name" content="Sparkt Work">
-    <meta itemprop="description" content="">
+    <meta itemprop="name" content="Sparkt | A Creative & Digital Marketing Agency in Mumbai">
+    <meta itemprop="description" content="Sparkt is a collaboration of data sciences and emotional intelligence to bridge need gaps with creative and experiential solutions both for brands and consumers.">
     <!-- CSS -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/css/reset.css" />
