--- a/Sparkt.WebApp/Views/Home/Index.cshtml
+++ b/Sparkt.WebApp/Views/Home/Index.cshtml
@@ -994,7 +994,7 @@
                                         <img src="~/Content/work/images/thums/mmf-thum.jpg" alt="">
                                         <div class="caption">
                                             <h4>MMF WEBSITE</h4>
-                                            <p>Conversational interface for enchanced experience</p>
+                                            <p>Conversational interface for enhanced experience</p>
                                         </div>
                                     </a>
                                 </li>
@@ -1043,7 +1043,7 @@
                                         <img src="~/Content/work/images/thums/mmf-thum.jpg" alt="">
                                         <div class="caption">
                                             <h4>MMF WEBSITE</h4>
-                                            <p>Conversational interface for enchanced experience</p>
+                                            <p>Conversational interface for enhanced experience</p>
                                         </div>
                                     </a>
                                 </li>
