--- a/Sparkt.WebApp/Views/work/MahindraMMF.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraMMF.cshtml
@@ -19,7 +19,7 @@
                 <i class="title-icon"><img src="~/Content/work/images/title-icon.png" alt="" /></i>
                 <h1>MMF WEBSITE</h1>
                 <div class="clear"></div>
-                <span>Conversational interface for enchanced experience</span>
+                <span>Conversational interface for enhanced experience</span>
             </div>          
         </div>
         @Html.Partial("_WorkMenu");
@@ -113,7 +113,7 @@
             <div class="quotes-wrapp">
                 <div class="quotes">
                     <h3>
-                        Voice Engine Optimisation will make a big difference to those customers who come hail from semi-urban and rural areas, making the offering democratic allowing multi-platform acces especially to market that does not understand mutual funds. By enabling a future facing experience, Sparkt has helped us develop differentiated & wholistic thinking for the brand.
+                        Voice Engine Optimisation will make a big difference to those customers who come hail from semi-urban and rural areas, making the offering democratic allowing multi-platform acces especially to market that does not understand mutual funds. By enabling a future facing experience, Sparkt has helped us develop differentiated & holistic thinking for the brand.
 
                     </h3>
                     <span class="quotes-writer">Mr. Ashutosh Bishnoi : MD & CEO Mahindra Mutual Fund</span>
