--- a/Sparkt.WebApp/Views/work/MahindraTextMoji.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraTextMoji.cshtml
@@ -19,7 +19,7 @@
                 <i class="title-icon"><img src="~/Content/work/images/title-icon.png" alt="" /></i>
                 <h1>MMF Textmoji</h1>
                 <div class="clear"></div>
-                <span>Conversational interface for enchanced experience</span>
+                <span>Conversational interface for enhanced experience</span>
             </div>           
         </div>
         @Html.Partial("_WorkMenu");
