--- a/Sparkt.WebApp/Views/Home/Index.cshtml
+++ b/Sparkt.WebApp/Views/Home/Index.cshtml
@@ -953,7 +953,7 @@
                                         <img src="~/Content/work/images/thums/mmf-info-thum.jpg" alt="">
                                         <div class="caption">
                                             <h4>MMF NFO Launches</h4>
-                                            <p></p>
+                                            <p>Ek Nayi Soch. Ek Nayi Raah.</p>
                                         </div>
                                     </a>
                                 </li>
@@ -962,7 +962,7 @@
                                         <img src="~/Content/work/images/thums/hsubh-thum.jpg" alt="">
                                         <div class="caption">
                                             <h4> Har Shaakh Pe Ullu Baithaa Hai</h4>
-                                            <p></p>
+                                            <p>Kya Ullu Banaya!</p>
                                         </div>
                                     </a>
                                 </li>
@@ -972,7 +972,7 @@
                         <div class="resp-tab-content" id="Innovations">
                             <ul>
                                 <li>
-                                    <a href="@Url.Action("UCypher","work")">
+                                    <a href="@Url.Action("UCypherInstafight","work")">
                                         <img src="~/Content/work/images/thums/u-cypher-insta-fight-thum.jpg" alt="">
                                         <div class="caption">
                                             <h4>UCYPHER</h4>
@@ -1012,7 +1012,7 @@
                                         <img src="~/Content/work/images/thums/ted-thum.jpg" alt="">
                                         <div class="caption">
                                             <h4>TED GOOGLE CARDS</h4>
-                                            <p></p>
+                                            <p>Nayi Soch</p>
                                         </div>
                                     </a>
                                 </li>
@@ -1021,7 +1021,7 @@
                                         <img src="~/Content/work/images/thums/hsubh-thum.jpg" alt="">
                                         <div class="caption">
                                             <h4>Har Shaakh Pe Ullu Baithaa Hai</h4>
-                                            <p></p>
+                                            <p>Kya Ullu Banaya!</p>
                                         </div>
                                     </a>
                                 </li>
@@ -1030,7 +1030,7 @@
                                         <img src="~/Content/work/images/thums/textmoji-thum.jpg" alt="">
                                         <div class="caption">
                                             <h4>MMF Text Moji</h4>
-                                            <p></p>
+                                            <p>Ek Nayi Soch. Ek Nayi Raah.</p>
                                         </div>
                                     </a>
                                 </li>
@@ -1230,7 +1230,7 @@
                                         <img src="~/Content/work/images/thums/hsubh-thum.jpg" alt="">
                                         <div class="caption">
                                             <h4>Har Shaakh Pe Ullu Baithaa Hai</h4>
-                                            <p></p>
+                                            <p>Kya Ullu Banaya!</p>
                                         </div>
                                     </a>
                                 </li>
@@ -1239,7 +1239,7 @@
                                         <img src="~/Content/work/images/thums/kullfi-thum.jpg" alt="">
                                         <div class="caption">
                                             <h4>Kulfi</h4>
-                                            <p></p>
+                                            <p>She sings about anything!</p>
                                         </div>
                                     </a>
                                 </li>
