--- a/Sparkt.WebApp/Views/work/DancePlus2.cshtml
+++ b/Sparkt.WebApp/Views/work/DancePlus2.cshtml
@@ -44,7 +44,7 @@
                         <div class="creative-assets " style="background-image: url(../Content/work/images/nach-slide-2-bg.jpg);">
                             <div class="container">
                                 <div class="assets-title">
-                                    <h4>ELEVATING THE EMOTIONAL VALUE OF THE FILM BY <br>BLURRING THE LINES BETWEEN REEL AND REAL</h4>
+                                    <h4>DIGITAL EXCLUSIVE CONTENT POWERED BY INFLUENCERS FROM THE SHOW AND THE CHANNEL</h4>
                                 </div>
                                 <div class="slickSlider-3d">
                                     <span class="mobileOverlay"> <img src="~/Content/work/images/mobileoverlayimg.png" class="portrait" alt="" /> <img src="~/Content/work/images/mobileoverlayimgHorizen.png" class="horizontal" alt="" /> </span>
@@ -90,7 +90,7 @@
                         <div class="creative-assets">
                             <div class="container">
                                 <div class="assets-title">
-                                    <h3>DRIVING DANCE HYSTERIA ACROSS THE COUNTRY FOR THE <br>AUDITIONS WITH A SOCIALLY INTEGRATED WEBSITE</h3>
+                                    <h3>Video innovation to greet key show markets with customised messages on YouTube</h3>
                                 </div>
                                 <div class="project fadeIn" data-t-show="1">
                                     <div class="project__card">
@@ -109,8 +109,8 @@
                     <div>
                         <div class="creative-assets dance-plus-bg">
                             <div class="container">
-                                <div class="assets-title">
-                                    <h3>UNLEASHING A SERIES OF DANCE BASED CONTENT <br>IN POPULAR FORMATS TO BOOST ENGAGEMENT</h3>
+                                <div class="assets-title">                                    
+                                    <h3>DRIVING DANCE HYSTERIA ACROSS THE COUNTRY FOR THE <br>AUDITIONS WITH A SOCIALLY INTEGRATED WEBSITE</h3>
                                 </div>
                                 <div class="website-operation">
                                     <figure class="figure-img"> <img src="~/Content/work/images/banner-video-trans.png" alt="brickex" class="responsive-img" style="width: 100%; vertical-align: top;" /> </figure>
@@ -164,19 +164,19 @@
                         <div class="result-info "> <span class="result-from">TOTAL IMPRESSIONS</span> <span class="result-points">35</span> <span class="result">MILLION</span> </div>
                     </li>
                     <li class="col-4 hvr-float-shadow">
-                        <div class="result-info "> <span class="result-from">TOTAL ENGAGEMENT</span> <span class="result-points">100,000+</span> <span class="result">THOUSAND</span> </div>
+                        <div class="result-info "> <span class="result-from">TOTAL ENGAGEMENT</span> <span class="result-points">100K+</span> <span class="result"></span> </div>
                     </li>
                 </ul>
             </div>
         </div>
-        <div class="container">
+        @*<div class="container">
             <div class="quotes-wrapp">
                 <div class="quotes">
                     <h3>Coming Soon</h3>
                     <span class="quotes-writer"></span>
                 </div>
             </div>
-        </div>
+        </div>*@
     </div>
 </main>
 
