--- a/Sparkt.WebApp/Views/work/HSPUBHMedia.cshtml
+++ b/Sparkt.WebApp/Views/work/HSPUBHMedia.cshtml
@@ -19,7 +19,7 @@
                 <i class="title-icon"><img src="~/Content/work/images/title-icon.png" alt="" /></i>
                 <h1>Har Shaakh Pe <br>Ullu Baithaa Hai</h1>
                 <div class="clear"></div>
-                <span>CHAITU LAL INTERRUPTS VIEWERS OF POPULAR SHOWS ON HOTSTAR WITH CONTEXTUAL DIALOGUES TO INTRODUCE HIS CHARACTER AND PROPAGANDA</span>
+                <span>Kya Ullu Banaya!</span>
             </div>
         </div>
         @Html.Partial("_WorkMenu");
