--- a/Sparkt.WebApp/Views/work/HSPubh.cshtml
+++ b/Sparkt.WebApp/Views/work/HSPubh.cshtml
@@ -242,12 +242,12 @@
                                 </div>
                                 <div class="sparkt-carousel">
                                     <div class="mobile-wrapp">
-                                        <span class="chaitu-elem elem-1"><img src="~/Content/work/images/chaitulala-elem-1.png" alt="" /></span>
+                                        @*<span class="chaitu-elem elem-1"><img src="~/Content/work/images/chaitulala-elem-1.png" alt="" /></span>*@
                                         <!--<span class="chaitu-elem elem-2" ><img src="images/chaitulala-elem-2.png" alt=""/></span>
                                         <span class="chaitu-elem elem-3" ><img src="images/chaitulala-elem-3.png" alt=""/></span>-->
-                                        <span class="chaitu-elem elem-4"><img src="~/Content/work/images/chaitulala-elem-4.png" alt="" /></span>
+                                        @*<span class="chaitu-elem elem-4"><img src="~/Content/work/images/chaitulala-elem-4.png" alt="" /></span>
                                         <span class="chaitu-elem elem-5"><img src="~/Content/work/images/chaitulala-elem-5.png" alt="" /></span>
-                                        <span class="chaitu-elem elem-6"><img src="~/Content/work/images/chaitulala-elem-6.png" alt="" /></span>
+                                        <span class="chaitu-elem elem-6"><img src="~/Content/work/images/chaitulala-elem-6.png" alt="" /></span>*@
                                         <div class="video-slider">
                                             <div class="video-item">
                                                 <video poster="~/Content/work/images/video-thums/chaitulal-anim-thum-1.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
@@ -309,7 +309,7 @@
             <div class="quotes-wrapp">
                 <div class="quotes">
                     <h3>Sparkt helped set context and drive intrigue for this political satire exploring an insight that is truest to India as a politically passionate yet easily misled nation - #KyaUlluBanaya. This campaign made waves across demographics rightly capturing the sentiment of the the common mass - paving way for a whole lot of digital conversations. The communication was further reinforced with thematic short-format content bringing alive the white lies of the lead protagonist. With Aaj ki Adalat, Sparkt produced a differentiated branded content piece that was released on Hotstar and remains a benchmark in parallel storytelling beyond on-air content. </h3>
-                    <span class="quotes-writer">Digital Marketing Head Star HGEC (STAR Plus & STAR Bharat)</span>
+                    <span class="quotes-writer">- Aijaz Nakhuda, Digital Marketing Head Star HGEC (STAR Plus & STAR Bharat)</span>
                 </div>
             </div>
         </div>
