--- a/Sparkt.WebApp/Views/work/Ikyawann.cshtml
+++ b/Sparkt.WebApp/Views/work/Ikyawann.cshtml
@@ -19,7 +19,7 @@
                 <i class="title-icon"><img src="~/Content/work/images/title-icon.png" alt="" /></i>
                 <h1>Ikyawann</h1>
                 <div class="clear"></div>
-                <span>Wear your Mother's name with pride.</span>
+                <span>Not Shaadi Material</span>
             </div>           
         </div>
         @Html.Partial("_WorkMenu");
@@ -156,7 +156,7 @@
             <div class="quotes-wrapp">
                 <div class="quotes">
                     <h3>Star Plus has always supported gender equality, encouraging women to stand up for their identity. Taking forth this philosophy of Nayi Soch, Sparkt helped create an organic storm of conversations rooted in a culturally potent insight that engaged both influencers & the audience alike. The powerful, polarising stimulus? #NotShaadiMaterial.</h3>
-                    <span class="quotes-writer">Digital Marketing Head Star HGEC (STAR Plus & STAR Bharat)</span>
+                    <span class="quotes-writer">- Aijaz Nakhuda, Digital Marketing Head Star HGEC (STAR Plus & STAR Bharat)</span>
                 </div>
             </div>
         </div>
