--- a/Sparkt.WebApp/Views/work/MahindraMMF.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraMMF.cshtml
@@ -74,7 +74,7 @@
                                         </li>
                                         <li class="col-5">
                                             <figure class="hvr-bubble-float-right">
-                                                <span><img src="images/mahindra-veo-4.jpg" alt=""></span>
+                                                <span><img src="~/Content/work/images/mahindra-veo-4.jpg" alt=""></span>
                                                 <figcaption>USERS GIVE A VOICE COMMAND</figcaption>
                                             </figure>
 
