--- a/Sparkt.WebApp/Views/work/MahindraUnnati.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraUnnati.cshtml
@@ -108,10 +108,10 @@
                 </div>
             </div>
         </div>
-        <div class="section white-bg">
-            <!--  <div class="head-title floated text-color-dark"> <i class="title-icon"><img src="images/title-icon.png" alt=""/></i>
+        @*<div class="section white-bg">
+              <div class="head-title floated text-color-dark"> <i class="title-icon"><img src="images/title-icon.png" alt=""/></i>
                 <h2>Results</h2>
-              </div>-->
+              </div>
 
             <div class="container">
                 <div class="quotes-wrapp">
@@ -121,5 +121,5 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>*@
 </main>
