--- a/Sparkt.WebApp/Views/work/NayiSoch.cshtml
+++ b/Sparkt.WebApp/Views/work/NayiSoch.cshtml
@@ -69,7 +69,7 @@
                                         </div>-->
                                     </div>
                                     <div class="project-text"><p>MAKE YOUR OWN VIRTUAL JERSEY ON A GOOGLE LIGHTBOX BANNER</p></div>
-                                    <div class="project-text right bottom"><p>WATCH THE SERIES OF NAYI SOCH FILMS ON THE YOUTUBE MASTHEAD</p></div>
+                                    <div class="project-text right bottom"><p>SERIES OF NAYI SOCH FILMS ON THE YOUTUBE MASTHEAD</p></div>
                                 </div>
                             </div>
                         </div>
@@ -112,7 +112,7 @@
                                         </li>
                                         <li class="col-5">
                                             <figure class="hvr-bubble-float-left">
-                                                <span><img src="images/nayisoch-twitter-tweets-5.jpg" alt=""></span>
+                                                <span><img src="~/Content/work/images/nayisoch-twitter-tweets-5.jpg" alt=""></span>
                                                 <figcaption>USERS FLAUNT A NAYI SOCH ON THEIR TWITTER PROFILES</figcaption>
                                             </figure>
 
@@ -139,10 +139,10 @@
                         <div class="result-info "> <span class="result-from">Video VIEWS</span> <span class="result-points">30</span> <span class="result">MILLION</span> </div>
                     </li>
                     <li class="col-4 hvr-float-shadow">
-                        <div class="result-info "> <span class="result-from">PROFILE PICTURE CHANGES</span> <span class="result-points">2,000</span> <span class="result">THOUSAND +</span> </div>
+                        <div class="result-info "> <span class="result-from">PROFILE PICTURE CHANGES</span> <span class="result-points">2K+</span> <span class="result"></span> </div>
                     </li>
                     <li class="col-4 hvr-float-shadow">
-                        <div class="result-info "> <span class="result-from">MENTIONS</span> <span class="result-points">100,000</span> <span class="result">THOUSAND +</span> </div>
+                        <div class="result-info "> <span class="result-from">MENTIONS</span> <span class="result-points">100K+</span> <span class="result"></span> </div>
                     </li>
                     <li class="col-4 hvr-float-shadow">
                         <div class="result-info "> <span class="result-from">POTENTIAL IMPRESSIONS</span> <span class="result-points">7</span> <span class="result">BILLION</span> </div>
