--- a/Sparkt.WebApp/Views/work/Pow.cshtml
+++ b/Sparkt.WebApp/Views/work/Pow.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | POW - Bandhi Yuddh Ke";
+    ViewBag.Title = "Sparkt Work | POW - Bandi Yuddh Ke";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
 }
 
@@ -17,7 +17,7 @@
             </div>
             <div class="head-title floated">
                 <i class="title-icon"><img src="~/Content/work/images/title-icon.png" alt="" /></i>
-                <h1>POW-BANDHI YUDDH KE</h1>
+                <h1>POW-BANDI YUDDH KE</h1>
                 <div class="clear"></div>
                 <span>A first-of-a-kind banner that created true 'shock' value</span>
             </div>           
@@ -85,7 +85,7 @@
                         <div class="result-info "> <span class="result-from">IMPRESSIONS</span> <span class="result-points">1.5</span> <span class="result">MILLION</span> </div>
                     </li>
                     <li class="col-3 hvr-float-shadow">
-                        <div class="result-info "> <span class="result-from">ENGAGEMENTS</span> <span class="result-points">37,678</span> <span class="result">THOUSAND</span> </div>
+                        <div class="result-info "> <span class="result-from">ENGAGEMENTS</span> <span class="result-points">37K+</span> <span class="result"></span> </div>
                     </li>
                     <li class="col-3 hvr-float-shadow">
                         <div class="result-info "> <span class="result-from">TOTAL REACH</span> <span class="result-points">2.5%</span> <span class="result"></span> </div>
