--- a/Sparkt.WebApp/Views/work/UCypher.cshtml
+++ b/Sparkt.WebApp/Views/work/UCypher.cshtml
@@ -57,7 +57,7 @@
 
                                 <div class="container ">
                                     <div class="assets-title">
-                                        <h4>Hum Gamer Hain an anthem for the gamers introducing them <br>to the thrilling world of UCypher </h4>
+                                        <h4>Hum Gamer Hain - an anthem for the gamers introducing them <br>to the thrilling world of UCypher </h4>
                                     </div>
 
                                 </div>
@@ -377,7 +377,7 @@
             <div class="quotes-wrapp">
                 <div class="quotes">
                     <h3>
-                        The U Cypher ‘Naya Sport Naye superstars’ campaign is one of the most extensive campaigns done at U Sports. The objective was to introduce E-sports as a new sports discipline. Also, to present the superstars of tomorrow, budding E-Athletes to the nation.<br>
+                        The U Cypher ‘Naya Sport Naye superstars’ campaign is one of the most extensive campaigns done at USports. The objective was to introduce E-sports as a new sports discipline. Also, to present the superstars of tomorrow, budding E-Athletes to the nation.<br>
                         Sparkt has been brilliant with the thought behind the campaign. The campaign line was simple and took the messaging right through.  What followed was a culmination of beautifully thought out ideas and creatives across platforms. Even the music video ‘Hum Gamer Hain’ got us international acclaim. This not only helped us get the desired reach and engagement but almost twice over and helped us built a highly engaged community from scratch. There’s an element of freshness in approach which I haven’t seen with most agencies.
                     </h3>
                     <span class="quotes-writer">Jason Nath - VP Marketing - USports</span>
