--- a/Sparkt.WebApp/Views/work/WomensDay.cshtml
+++ b/Sparkt.WebApp/Views/work/WomensDay.cshtml
@@ -196,7 +196,7 @@
             <div class="quotes-wrapp">
                 <div class="quotes">
                     <h3>Star Plus continuously strives towards unlocking the limitless power of women. On Women’s Day, Sparkt ignited a Nayi Soch to raise a question and spark conversations through digital innovations and thought-provoking content.</h3>
-                    <span class="quotes-writer">Digital Marketing Head Star HGEC (STAR Plus & STAR Bharat)</span>
+                    <span class="quotes-writer">- Aijaz Nakhuda, Digital Marketing Head Star HGEC (STAR Plus & STAR Bharat)</span>
                 </div>
             </div>
         </div>
