--- a/Sparkt.WebApp/Views/work/MadeByMom.cshtml
+++ b/Sparkt.WebApp/Views/work/MadeByMom.cshtml
@@ -112,7 +112,7 @@
                         <div class="creative-assets ">
                             <div class="container">
                                 <div class="assets-title">
-                                    <!-- <h3></h3>-->
+                                     <h3>The film released on Mother's Day to set the context of what makes us all 'Made by Mom'</h3>
                                 </div>
 
                                 <div class="three-img-carousel-wrapp">
