--- a/Sparkt.WebApp/Views/work/Ted.cshtml
+++ b/Sparkt.WebApp/Views/work/Ted.cshtml
@@ -58,22 +58,22 @@
 
                                 <div class="video-slider">
                                     <div class="video-item">
-                                        <video poster="images/video-thums/ted-video-2.png" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                        <video poster="~/Content/work/images/video-thums/ted-video-2.png" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                             <source src="https://youtu.be/kUHWiEuqJ_E" type="video/youtube" />
                                         </video>
                                     </div>
                                     <div class="video-item">
-                                        <video poster="images/video-thums/ted-video-3.png" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                        <video poster="~/Content/work/images/video-thums/ted-video-3.png" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                             <source src="https://youtu.be/FtcrfwQRebk" type="video/youtube" />
                                         </video>
                                     </div>
                                     <div class="video-item">
-                                        <video poster="images/video-thums/ted-video-4.png" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                        <video poster="~/Content/work/images/video-thums/ted-video-4.png" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                             <source src="https://youtu.be/hihlB9RfJKI" type="video/youtube" />
                                         </video>
                                     </div>
                                     <div class="video-item">
-                                        <video poster="images/video-thums/ted-video-1.png" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                        <video poster="~/Content/work/images/video-thums/ted-video-1.png" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                             <source src="https://youtu.be/fNu_AlL_vPc" type="video/youtube" />
                                         </video>
                                     </div>
@@ -131,22 +131,22 @@
 
 
 
-                            <div class="nav-item" data-src="http://www.youtube.com/embed/VSG2tUDVKyI?rel=0&amp;autoplay=1&amp;wmode=transparent" data-poster="images/ted-onir.jpg" data-sub-html="<h4>Onir (Influencer)</h4>"><a href="#" class="hvr-trim"><img src="images/ted-onir.jpg" alt="" /><span class="caption">Onir (Influencer)</span></a> </div>
+                            <div class="nav-item" data-src="http://www.youtube.com/embed/VSG2tUDVKyI?rel=0&amp;autoplay=1&amp;wmode=transparent" data-poster="/Content/work/images/ted-onir.jpg" data-sub-html="<h4>Onir (Influencer)</h4>"><a href="#" class="hvr-trim"><img src="~/Content/work/images/ted-onir.jpg" alt="" /><span class="caption">Onir (Influencer)</span></a> </div>
 
 
-                            <div class="nav-item" data-src="http://www.youtube.com/embed/GLAvPwn8DkU?rel=0&amp;autoplay=1&amp;wmode=transparent" data-poster="images/ted-terence-lewis.jpg" data-sub-html="<h4>Terence Lewis (Influencer)</h4>"><a href="#" class="hvr-trim"><img src="images/ted-terence-lewis.jpg" alt="" /><span class="caption">Terence Lewis (Influencer)</span></a> </div>
+                            <div class="nav-item" data-src="http://www.youtube.com/embed/GLAvPwn8DkU?rel=0&amp;autoplay=1&amp;wmode=transparent" data-poster="/Content/work/images/ted-terence-lewis.jpg" data-sub-html="<h4>Terence Lewis (Influencer)</h4>"><a href="#" class="hvr-trim"><img src="~/Content/work/images/ted-terence-lewis.jpg" alt="" /><span class="caption">Terence Lewis (Influencer)</span></a> </div>
 
 
-                            <div class="nav-item" data-src="http://www.youtube.com/embed/YxHaafzmpuE?rel=0&amp;autoplay=1&amp;wmode=transparent" data-poster="images/ted-roti-maker.jpg" data-sub-html="<h4>Roti Maker (Promo)</h4>"><a href="#" class="hvr-trim"><img src="images/ted-roti-maker.jpg" alt="" /><span class="caption">Roti Maker (Promo)</span></a> </div>
+                            <div class="nav-item" data-src="http://www.youtube.com/embed/YxHaafzmpuE?rel=0&amp;autoplay=1&amp;wmode=transparent" data-poster="/Content/work/images/ted-roti-maker.jpg" data-sub-html="<h4>Roti Maker (Promo)</h4>"><a href="#" class="hvr-trim"><img src="~/Content/work/images/ted-roti-maker.jpg" alt="" /><span class="caption">Roti Maker (Promo)</span></a> </div>
 
 
-                            <div class="nav-item" data-src="http://www.youtube.com/embed/vjwwGOfNi0U?rel=0&amp;autoplay=1&amp;wmode=transparent" data-poster="images/ted-drone.jpg" data-sub-html="<h4>Drone (Promo)</h4>"><a href="#" class="hvr-trim"><img src="images/ted-drone.jpg" alt="" /><span class="caption">Drone (Promo)</span></a> </div>
+                            <div class="nav-item" data-src="http://www.youtube.com/embed/vjwwGOfNi0U?rel=0&amp;autoplay=1&amp;wmode=transparent" data-poster="/Content/work/images/ted-drone.jpg" data-sub-html="<h4>Drone (Promo)</h4>"><a href="#" class="hvr-trim"><img src="~/Content/work/images/ted-drone.jpg" alt="" /><span class="caption">Drone (Promo)</span></a> </div>
 
 
-                            <div class="nav-item" data-src="http://www.youtube.com/embed/jKC0714ZGJ4?rel=0&amp;autoplay=1&amp;wmode=transparent" data-poster="images/ted-live-with-virdass.jpg" data-sub-html="<h4>Live with Vir Das (Influencer)</h4>"><a href="#" class="hvr-trim"><img src="images/ted-live-with-virdass.jpg" alt="" /><span class="caption">Live with Vir Das (Influencer)</span></a> </div>
+                            <div class="nav-item" data-src="http://www.youtube.com/embed/jKC0714ZGJ4?rel=0&amp;autoplay=1&amp;wmode=transparent" data-poster="/Content/work/images/ted-live-with-virdass.jpg" data-sub-html="<h4>Live with Vir Das (Influencer)</h4>"><a href="#" class="hvr-trim"><img src="~/Content/work/images/ted-live-with-virdass.jpg" alt="" /><span class="caption">Live with Vir Das (Influencer)</span></a> </div>
 
 
-                            <div class="nav-item" data-src="http://www.youtube.com/embed/JmYdy-tWFAU?rel=0&amp;autoplay=1&amp;wmode=transparent" data-poster="images/ted-remo.jpg" data-sub-html="<h4>Remo Dsouza (Influencer)</h4>"><a href="#" class="hvr-trim"><img src="images/ted-remo.jpg" alt="" /><span class="caption">Remo Dsouza (Influencer)</span></a> </div>
+                            <div class="nav-item" data-src="http://www.youtube.com/embed/JmYdy-tWFAU?rel=0&amp;autoplay=1&amp;wmode=transparent" data-poster="/Content/work/images/ted-remo.jpg" data-sub-html="<h4>Remo Dsouza (Influencer)</h4>"><a href="#" class="hvr-trim"><img src="~/Content/work/images/ted-remo.jpg" alt="" /><span class="caption">Remo Dsouza (Influencer)</span></a> </div>
 
 
 
@@ -190,39 +190,39 @@
 
 
 
-                            <div class="nav-item" data-src="http://www.youtube.com/embed/DqXE73I7egQ?rel=0&amp;autoplay=1&amp;wmode=transparent" data-poster="images/ted-dr-velumani.jpg" data-sub-html="<h4>Dr. Velumani</h4>"><a href="#" class="hvr-trim"><img src="images/ted-dr-velumani.jpg" alt="" /><span class="caption">Dr. Velumani </span></a> </div>
+                            <div class="nav-item" data-src="http://www.youtube.com/embed/DqXE73I7egQ?rel=0&amp;autoplay=1&amp;wmode=transparent" data-poster="/Content/work/images/ted-dr-velumani.jpg" data-sub-html="<h4>Dr. Velumani</h4>"><a href="#" class="hvr-trim"><img src="~/Content/work/images/ted-dr-velumani.jpg" alt="" /><span class="caption">Dr. Velumani </span></a> </div>
 
 
-                            <div class="nav-item" data-src="http://www.youtube.com/embed/mQvsl3pIVlA?rel=0&amp;autoplay=1&amp;wmode=transparent" data-poster="images/ted-siddharth-bannerjee.jpg" data-sub-html="<h4>Sonali Dhawan</h4>"><a href="#" class="hvr-trim"><img src="images/ted-siddharth-bannerjee.jpg" alt="" /><span class="caption">Siddharth Bannerjee</span></a> </div>
+                            <div class="nav-item" data-src="http://www.youtube.com/embed/mQvsl3pIVlA?rel=0&amp;autoplay=1&amp;wmode=transparent" data-poster="/Content/work/images/ted-siddharth-bannerjee.jpg" data-sub-html="<h4>Sonali Dhawan</h4>"><a href="#" class="hvr-trim"><img src="~/Content/work/images/ted-siddharth-bannerjee.jpg" alt="" /><span class="caption">Siddharth Bannerjee</span></a> </div>
 
 
-                            <div class="nav-item" data-src="http://www.youtube.com/embed/jcUAZXHrUTY?rel=0&amp;autoplay=1&amp;wmode=transparent" data-poster="images/ted-ashish-basin.jpg" data-sub-html="<h4>Ashish Basin</h4>"><a href="#" class="hvr-trim"><img src="images/ted-ashish-basin.jpg" alt="" /><span class="caption">Ashish Basin</span></a> </div>
+                            <div class="nav-item" data-src="http://www.youtube.com/embed/jcUAZXHrUTY?rel=0&amp;autoplay=1&amp;wmode=transparent" data-poster="/Content/work/images/ted-ashish-basin.jpg" data-sub-html="<h4>Ashish Basin</h4>"><a href="#" class="hvr-trim"><img src="~/Content/work/images/ted-ashish-basin.jpg" alt="" /><span class="caption">Ashish Basin</span></a> </div>
 
 
-                            <div class="nav-item" data-src="http://www.youtube.com/embed/Ih1rvmOm02g?rel=0&amp;autoplay=1&amp;wmode=transparent" data-poster="images/ted-sam-balsara.jpg" data-sub-html="<h4>Sam Balsara</h4>"><a href="#" class="hvr-trim"><img src="images/ted-sam-balsara.jpg" alt="" /><span class="caption">Sam Balsara</span></a> </div>
+                            <div class="nav-item" data-src="http://www.youtube.com/embed/Ih1rvmOm02g?rel=0&amp;autoplay=1&amp;wmode=transparent" data-poster="/Content/work/images/ted-sam-balsara.jpg" data-sub-html="<h4>Sam Balsara</h4>"><a href="#" class="hvr-trim"><img src="~/Content/work/images/ted-sam-balsara.jpg" alt="" /><span class="caption">Sam Balsara</span></a> </div>
 
 
-                            <div class="nav-item" data-src="http://www.youtube.com/embed/rFvvuo3QL9k?rel=0&amp;autoplay=1&amp;wmode=transparent" data-poster="images/ted-subhash-kamath.jpg" data-sub-html="<h4>Subhash Kamath</h4>"><a href="#" class="hvr-trim"><img src="images/ted-subhash-kamath.jpg" alt="" /><span class="caption">Subhash Kamath</span></a> </div>
+                            <div class="nav-item" data-src="http://www.youtube.com/embed/rFvvuo3QL9k?rel=0&amp;autoplay=1&amp;wmode=transparent" data-poster="/Content/work/images/ted-subhash-kamath.jpg" data-sub-html="<h4>Subhash Kamath</h4>"><a href="#" class="hvr-trim"><img src="~/Content/work/images/ted-subhash-kamath.jpg" alt="" /><span class="caption">Subhash Kamath</span></a> </div>
 
 
-                            <div class="nav-item" data-src="http://www.youtube.com/embed/eu7F4LGngac?rel=0&amp;autoplay=1&amp;wmode=transparent" data-poster="images/ted-sonali-dhawan.jpg" data-sub-html="<h4>Sonali Dhawan</h4>"><a href="#" class="hvr-trim"><img src="images/ted-sonali-dhawan.jpg" alt="" /><span class="caption">Sonali Dhawan</span></a> </div>
-
-
-
-
-                            <div class="nav-item" data-src="http://www.youtube.com/embed/CBni54SlppQ?rel=0&amp;autoplay=1&amp;wmode=transparent" data-poster="images/ted-rana-barua.jpg" data-sub-html="<h4>Rana Barua</h4>"><a href="#" class="hvr-trim"><img src="images/ted-rana-barua.jpg" alt="" /><span class="caption">Rana Barua</span></a> </div>
-
-
-                            <div class="nav-item" data-src="http://www.youtube.com/embed/4kBLi3Zg_KA?rel=0&amp;autoplay=1&amp;wmode=transparent" data-poster="images/ted-ramesh-narayan.jpg" data-sub-html="<h4>Ramesh Narayan</h4>"><a href="#" class="hvr-trim"><img src="images/ted-ramesh-narayan.jpg" alt="" /><span class="caption">Ramesh Narayan</span></a> </div>
+                            <div class="nav-item" data-src="http://www.youtube.com/embed/eu7F4LGngac?rel=0&amp;autoplay=1&amp;wmode=transparent" data-poster="/Content/work/images/ted-sonali-dhawan.jpg" data-sub-html="<h4>Sonali Dhawan</h4>"><a href="#" class="hvr-trim"><img src="~/Content/work/images/ted-sonali-dhawan.jpg" alt="" /><span class="caption">Sonali Dhawan</span></a> </div>
 
 
 
-                            <div class="nav-item" data-src="http://www.youtube.com/embed/98EyXtCk1EQ?rel=0&amp;autoplay=1&amp;wmode=transparent" data-poster="images/ted-kashyap-vadpilli.jpg" data-sub-html="<h4>Kashyap Vadapilli</h4>"><a href="#" class="hvr-trim"><img src="images/ted-kashyap-vadpilli.jpg" alt="" /><span class="caption">Kashyap Vadapilli</span></a> </div>
+
+                            <div class="nav-item" data-src="http://www.youtube.com/embed/CBni54SlppQ?rel=0&amp;autoplay=1&amp;wmode=transparent" data-poster="/Content/work/images/ted-rana-barua.jpg" data-sub-html="<h4>Rana Barua</h4>"><a href="#" class="hvr-trim"><img src="~/Content/work/images/ted-rana-barua.jpg" alt="" /><span class="caption">Rana Barua</span></a> </div>
 
 
-                            <div class="nav-item" data-src="http://www.youtube.com/embed/673lDZ_lkUo?rel=0&amp;autoplay=1&amp;wmode=transparent" data-poster="images/ted-bobby-pawar.jpg" data-sub-html="<h4>Bobby Pawar</h4>"><a href="#" class="hvr-trim"><img src="images/ted-bobby-pawar.jpg" alt="" /><span class="caption">Bobby Pawar</span></a> </div>
+                            <div class="nav-item" data-src="http://www.youtube.com/embed/4kBLi3Zg_KA?rel=0&amp;autoplay=1&amp;wmode=transparent" data-poster="/Content/work/images/ted-ramesh-narayan.jpg" data-sub-html="<h4>Ramesh Narayan</h4>"><a href="#" class="hvr-trim"><img src="~/Content/work/images/ted-ramesh-narayan.jpg" alt="" /><span class="caption">Ramesh Narayan</span></a> </div>
 
-                            <div class="nav-item" data-src="http://www.youtube.com/embed/Zy3lj8cslUA?rel=0&amp;autoplay=1&amp;wmode=transparent" data-poster="images/ted-ajay-kakkar.jpg" data-sub-html="<h4>Ajay Kakkar</h4>"><a href="#" class="hvr-trim"><img src="images/ted-ajay-kakkar.jpg" alt="" /><span class="caption">Ajay Kakkar</span></a> </div>
+
+
+                            <div class="nav-item" data-src="http://www.youtube.com/embed/98EyXtCk1EQ?rel=0&amp;autoplay=1&amp;wmode=transparent" data-poster="/Content/work/images/ted-kashyap-vadpilli.jpg" data-sub-html="<h4>Kashyap Vadapilli</h4>"><a href="#" class="hvr-trim"><img src="~/Content/work/images/ted-kashyap-vadpilli.jpg" alt="" /><span class="caption">Kashyap Vadapilli</span></a> </div>
+
+
+                            <div class="nav-item" data-src="http://www.youtube.com/embed/673lDZ_lkUo?rel=0&amp;autoplay=1&amp;wmode=transparent" data-poster="/Content/work/images/ted-bobby-pawar.jpg" data-sub-html="<h4>Bobby Pawar</h4>"><a href="#" class="hvr-trim"><img src="~/Content/work/images/ted-bobby-pawar.jpg" alt="" /><span class="caption">Bobby Pawar</span></a> </div>
+
+                            <div class="nav-item" data-src="http://www.youtube.com/embed/Zy3lj8cslUA?rel=0&amp;autoplay=1&amp;wmode=transparent" data-poster="/Content/work/images/ted-ajay-kakkar.jpg" data-sub-html="<h4>Ajay Kakkar</h4>"><a href="#" class="hvr-trim"><img src="~/Content/work/images/ted-ajay-kakkar.jpg" alt="" /><span class="caption">Ajay Kakkar</span></a> </div>
 
 
                         </div>
@@ -311,7 +311,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <span class="fb-live-icon"><img src="images/fb-live-icon.png" alt=""></span>
+                                    <span class="fb-live-icon"><img src="~/Content/work/images/fb-live-icon.png" alt=""></span>
                                 </div>
 
                             </div>
@@ -378,7 +378,7 @@
 
                                 <div class="tw-tag-wrapp">
                                     <div class="tw-tag hvr-bob">
-                                        <img src="images/ted-mentions-phone.png" alt="" class="fadeIn" data-t-show="1" />
+                                        <img src="~/Content/work/images/ted-mentions-phone.png" alt="" class="fadeIn" data-t-show="1" />
                                         <ul>
                                             <li class="hvr-push"><img src="~/Content/work/images/ted-tag1.png" alt="" class="fadeUp" data-t-show="1" /></li>
                                             <li class="hvr-push"><img src="~/Content/work/images/ted-tag2.png" alt="" class="fadeUp" data-t-show="2" /></li>
@@ -421,7 +421,7 @@
             <div class="quotes-wrapp">
                 <div class="quotes">
                     <h3>With TED Talks India Nayi Soch, STAR Plus expanded the canvas of Nayi Soch beyond gender, and dived deep into the power of ideas across all walks of life. Sparkt helped us with this expansion of our brand philosophy to produce true influence across audiences in India with a multitude of content. From a series of social experiments to explore the show's themes, exclusive stories to establish speakers, promo marketing to specific TGs, the first of a kind Facebook Live interweaving offline content and much more. With a holistic approach, TED Talks India Nayi Soch campaign created a large-scale creative intervention in India inspiring millions. </h3>
-                    <span class="quotes-writer">Digital Marketing Head Star HGEC (STAR Plus & STAR Bharat) </span>
+                    <span class="quotes-writer">- Aijaz Nakhuda, Digital Marketing Head Star HGEC (STAR Plus & STAR Bharat) </span>
                 </div>
             </div>
         </div>
