--- a/Sparkt.WebApp/Views/work/TedGoogleCards.cshtml
+++ b/Sparkt.WebApp/Views/work/TedGoogleCards.cshtml
@@ -93,13 +93,13 @@
                 </ul>
             </div>
         </div>
-        <div class="container">
+        @*<div class="container">
             <div class="quotes-wrapp">
                 <div class="quotes">
                     <h3>Coming Soon </h3>
                     <span class="quotes-writer"> </span>
                 </div>
             </div>
-        </div>
+        </div>*@
     </div>
 </main>
